[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.0-rc.1", features = [
    "sqlx-mysql",
    "runtime-actix-native-tls",
    "macros"
] }
sea-orm-migration = "^1.1.0-rc.1"
serde = { version = "1.0.210", features = ["derive"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
dotenvy = "0.15.7"